<resources>
    <string name="app_name">TeacherIIY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Teacher Dashboard</string>
    <string name="nav_header_subtitle">class 6</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Attendance</string>
    <string name="menu_slideshow">Leave Request</string>
    <string name="menu_tools">Feedback</string>
    <string name="menu_share">Daily Marks</string>
    <string name="menu_send">HomeWork</string>
</resources>
